deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtgfail-api
  namespace: mtgfail
  labels:
    app: mtgfail-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mtgfail-api
  template:
    metadata:
      labels:
        app: mtgfail-api
    spec:
      containers:
      - name: mtgfail-api
        image: gcr.io/snackend/mtgfail:6c0120d
        resources:
          limits:
            memory: "3G"
            cpu: "1"
          requests:
            memory: "1024Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
---
kind: Service 
apiVersion: v1 
metadata:
  name: mtgfail-api
  namespace: mtgfail
spec:
  type: NodePort
  selector:
    app: mtgfail-api
  ports:
    - nodePort:
      port: 8080
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: mcrt-a6848374-2a6a-440c-806b-6252550d13b8
    ingress.kubernetes.io/backends: '{"k8s-be-30989--b9099299c98098b5":"HEALTHY"}'
    ingress.kubernetes.io/forwarding-rule: k8s-fw-mtgfail-mtgfail--b9099299c98098b5
    ingress.kubernetes.io/https-forwarding-rule: k8s-fws-mtgfail-mtgfail--b9099299c98098b5
    ingress.kubernetes.io/https-target-proxy: k8s-tps-mtgfail-mtgfail--b9099299c98098b5
    ingress.kubernetes.io/ssl-cert: mcrt-a6848374-2a6a-440c-806b-6252550d13b8
    ingress.kubernetes.io/static-ip: k8s-fw-mtgfail-mtgfail--b9099299c98098b5
    ingress.kubernetes.io/target-proxy: k8s-tp-mtgfail-mtgfail--b9099299c98098b5
    ingress.kubernetes.io/url-map: k8s-um-mtgfail-mtgfail--b9099299c98098b5
    networking.gke.io/managed-certificates: mtgfail
  generation: 1
  name: mtgfail
  namespace: mtgfail
spec:
  backend:
    serviceName: mtgfail-api
    servicePort: 8080
status:
  loadBalancer:
    ingress:
    - ip: 35.227.210.133
